--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "static_node_and_express_site-v1.01",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
